# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.993.2.93 2010/01/13 13:19:55 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.7 (2010/??/??)
 - (2010/01/13) Fixed bug#4713 - In ticket overview, after adding view=30 - no
    tickets are visible.
 - (2010/01/12) Upgrade of cpan Net::IMAP::Simple from 1.17 to 1.1910.

2.4.6 (2010/01/12)
 - (2010/01/11) Fixed bug#4737 - Customer User update fails in 2.4.6 RC.
 - (2010/01/08) Fixed bug#4730 - Unable to open Admin > Attachments in IE8.
 - (2010/01/07) Fixed bug#4731 - Service and SLA gets translated after AJAX
    reload in Phone an Email Ticket.
 - (2010/01/05) Fixed bug#4718 - LDAP auth not possible with OTRS in iso-8859-1
    and utf-8 ldap directory.
 - (2010/01/05) Fixed bug#4708 - Added ArticleID to output of
    bin/otrs.getTicketThread.
 - (2010/01/04) Fixed bug#4704 - Package Manager: upload install fails with
    "Message: Need ContentType!" with Google Chrome browser.
 - (2009/12/30) Added Ukrainian language translation, thanks to Belskii Artem!
 - (2009/12/30) Fixed bug#4727 - Added proper removal of FormID in
    AgentTicketPhoneOutbound.
 - (2009/12/23) Fixed bug#3526 - Escalation emails are resent over and over again.
 - (2009/12/23) Fixed bug#4428 - PGP-inline signed messages can't be encoded
    correctly with rich text editor.
 - (2009/12/22) Fixed bug#4690 - AdminMailAccount - only 50 characters can be
    entered in username, password and host fields while database can store 200.
 - (2009/12/16) Fixed bug#4503 - Border around image does not display well
    in some email clients.
 - (2009/12/13) Fixed bug#4393 - AgentTicketQueue - Small view takes long to load.
 - (2009/12/09) Fixed crash in Ascii2Html() if no scalar reference is given.