@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.93 2010/01/13 13:19:55 martin Exp $
+# $Id: CHANGES,v 1.993.2.95 2010/01/13 16:58:31 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.7 (2010/??/??)
+ - (2010/01/13) Fixed bug#4754 - Multiple tickets with a huge POP3 Mailbox
+     ("Deep recursion on subroutine").
  - (2010/01/13) Fixed bug#4713 - In ticket overview, after adding view=30 - no
     tickets are visible.
  - (2010/01/12) Upgrade of cpan Net::IMAP::Simple from 1.17 to 1.1910.
